[gd_scene load_steps=2 format=3 uid="uid://c67eie5p2qfs3"]

[ext_resource type="Script" uid="uid://bsjtrlf6gkmod" path="res://scripts/time/TimeDisplay.gd" id="1_6rcp4"]

[node name="TimeDisplay" type="Control"]
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_6rcp4")

[node name="Bar" type="HBoxContainer" parent="."]
layout_mode = 1
offset_top = 48.0
offset_right = 272.0
offset_bottom = 88.0

[node name="ClockLabel" type="Label" parent="Bar"]
layout_mode = 2
text = "10:30 AM"

[node name="PhaseLabel" type="Label" parent="Bar"]
layout_mode = 2
text = "MORNING"

[node name="DayWeekLabel" type="Label" parent="Bar"]
layout_mode = 2
text = "Day 1 - Week 1"

[node name="SunProgress" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2
show_percentage = false
